Fix dark mode footer background color to match body

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -198,7 +198,7 @@ body.dark-mode {
 
 
   footer {
-    background-color: #2C3E50;
+    background-color: #232328;
     border-top: 1px solid #4a4a4a;
   }
   footer .list-inline .list-inline-item a {
